fixing spacing

--- a/blocks/product-categories/product-categories.css
+++ b/blocks/product-categories/product-categories.css
@@ -17,6 +17,10 @@
   margin-top: 3rem
 }
 
+.product-categories-wrapper :is(.mb-12) {
+  margin-bottom: 3rem
+}
+
 .product-categories-wrapper :is(.block) {
   display: block
 }
