--- a/blocks/simple-text/simple-text.css
+++ b/blocks/simple-text/simple-text.css
@@ -67,6 +67,15 @@
   flex-wrap: wrap
 }
 
+.simple-text-wrapper :is(.border-t) {
+  border-top-width: 1px
+}
+
+.simple-text-wrapper :is(.border-gray-300) {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity))
+}
+
 .simple-text-wrapper :is(.bg-danaherlightblue-50) {
   --tw-bg-opacity: 1;
   background-color: rgb(239 251 253 / var(--tw-bg-opacity))
@@ -87,6 +96,10 @@
 
 .simple-text-wrapper :is(.pl-0) {
   padding-left: 0px
+}
+
+.simple-text-wrapper :is(.pt-12) {
+  padding-top: 3rem
 }
 
 .simple-text-wrapper :is(.text-3xl) {
